# MCP-data-inclusion

./: .env.example  .env.local  DOCKER_README.md  QUICK_START.md  README.md  clean.sh  docker-compose.yml  gradio_app.py  main.py  pyproject.toml  start-agent-server.sh  start-dev.sh  start-frontend.sh  start-mcp-server.sh  start.bat  start.sh  test-services.sh
.cursor/rules/: backend-architecture.mdc  fastmcp-best-practices.mdc  frontend-architecture.mdc  nextjs.mdc  pydantic-ai-best-practices.mdc  shadcn-ui.mdc  zustand.mdc
backend/: Dockerfile  main.py  pyproject.toml
backend/src/: __init__.py
backend/src/agent/: __init__.py  agent.py  config.py  dependencies.py  main.py  persistence.py  server.py
backend/src/mcp/: __init__.py  logging_config.py  middleware.py
frontend/: .dockerignore  Dockerfile  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/chat/: ChatInput.tsx  ChatMessage.tsx  ChatWindow.tsx  MessageList.tsx  index.ts
frontend/hooks/: useA2AClient.ts
frontend/stores/: chatStore.ts  index.ts
src/: __init__.py  gradio_app.py  gradio_interface.py  gradio_utils.py
src/agent/: agent.py  config.py  server.py
src/api/: dependencies.py  router.py
src/client/: __init__.py  datainclusion_client.py
src/core/: lifespan.py  logging.py
src/mcp_server/: config.py  openapi_loader.py  server.py  tool_transformer.py  utils.py
src/ui/: chat.py
